--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vela-app</title>
+    <meta
+      name="description"
+      content="VELA Языковое кафе. Встречайся. Учись. Говори. Практикуйся."
+    />
+    <title>VELA Языковое кафе — Встречайся. Учись. Говори. Практикуйся.</title>
   </head>
   <body>
     <div id="root"></div>
